# FxHolidayCalculator

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  README.md  pack.sh  pyproject.toml  requirements.txt  run_ui.py
.github/: FUNDING.yml
.github/workflows/: refresh-holidays.yml  tests.yml
data/fx_exchange/: CME.json  CME_contracts.json  CME_options_contracts.json  HKEX.json  HKEX_contracts.json  HKEX_options_contracts.json  SGX.json  SGX_contracts.json  SGX_options_contracts.json
data/fx_fixing/: CNY.json  KRW.json  TWD.json
data/fx_rtgs/: CAD.json  CNH.json  EUR.json  GBP.json  HKD.json  JPY.json  USD.json
docs/: conventions.md  data-sources.md
fx_holiday_calculator/: __init__.py  forward.py  future.py  futures.py  holidays_view.py  ndf.py  option.py  option_listed.py  option_otc.py  options.py  pairs.py  refresh.py  swap.py  tenor.py
fx_holiday_calculator/calendars/: contracts.py  exchange.py  fixing.py  loader.py  national.py  rtgs.py  types.py
fx_holiday_calculator/conventions/: business_day.py  cross.py  dates.py  spot_offset.py
fx_holiday_calculator/ui/: _bundled.py  _widgets.py  app.py  product_forward.py  product_futures.py  product_listed_option.py  product_ndf.py  product_option.py  product_otc_option.py  product_spot.py  product_spot_swap.py  product_swap.py  sidebar.py  tab_about.py  tab_calculator.py  tab_holidays.py  tab_swap.py
scripts/sources/: _contracts_io.py  (+19 more)
tests/: test_business_day.py  test_calendar_loader.py  test_calendars_fixing.py  test_calendars_options_contracts.py  test_contract_loader.py  test_contracts.py  test_contracts_io.py  test_cross.py  test_data_integrity.py  test_fetcher_boe_chaps.py  test_fetcher_boj.py  test_fetcher_cfets_cny.py  test_fetcher_cme_contracts.py  test_fetcher_ecb_target2.py  test_fetcher_federal_reserve.py  test_fetcher_hkex_contracts.py  test_fetcher_hkgov_general_holidays.py  test_fetcher_hkma_chats_cnh.py  test_fetcher_kftc_krw.py  test_fetcher_library_fixing.py  test_fetcher_payments_canada_lynx.py  test_fetcher_sgx_contracts.py  test_fetcher_taifx_twd.py  test_forward.py  test_future.py  test_futures.py  test_holidays_view.py  test_integration_swap.py  test_library_exchange.py  test_library_tripwire_fixing.py  test_live_urls.py  test_national_calendar.py  test_ndf.py  test_option.py  test_option_listed.py  test_option_otc.py  test_options.py  test_otc_edge_cases.py  test_pairs.py  test_refresh.py  (+5 more)
(+36 files in other folders)
