[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-holiday-calculator"
version = "0.1.0"
description = "Double-check tool for FX swap dates and per-pair holiday calendars, with primary-source provenance for every date."
requires-python = ">=3.10,<3.13"
authors = [{name = "Chan Chun Yin Johnny"}]
license = {text = "MIT"}
dependencies = [
    "streamlit==1.30.*",
    "requests>=2.28",
    "pdfplumber>=0.10",
    "python-dateutil>=2.8",
    "holidays==0.45",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "flake8>=6",
    "black>=23",
    "isort>=5",
]

[tool.setuptools.packages.find]
include = ["fx_holiday_calculator*"]
exclude = ["tests*", "proprietary*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
